--- a/templates/user-service.yaml
+++ b/templates/user-service.yaml
@@ -2,17 +2,17 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: purely-user-service
+  name: user-service
   namespace: {{ .Values.namespace }}
 spec:
   replicas: {{ .Values.userService.replicaCount }}
   selector:
     matchLabels:
-      app: purely-user-service
+      app: user-service
   template:
     metadata:
       labels:
-        app: purely-user-service
+        app: user-service
     spec:
       initContainers:
         - name: wait-for-mongo
@@ -29,14 +29,20 @@ spec:
             - "until nc -z -v -w30 {{ .Values.userService.init.eurekaHost }} {{ .Values.userService.init.eurekaPort }}; do echo 'Waiting for Eureka...'; sleep 5; done;"
       containers:
         - name: user-service
-          image: {{ .Values.userService.image.repository }}:{{ .Values.userService.image.tag }}
+          image: "{{ .Values.userService.image.repository }}:{{ .Values.userService.image.tag }}"
           ports:
             - containerPort: {{ .Values.userService.containerPort }}
-          env:
-            - name: SPRING_SECURITY_LOG_LEVEL
-              value: {{ .Values.userService.env.securityLogLevel }}
-            - name: eureka.client.service-url.defaultZone
-              value: {{ .Values.userService.env.eurekaDefaultZone }}
+          envFrom:
+            - configMapRef:
+                 name: auth-service-config  
+            - secretRef:
+                name: {{ .Values.secretName }} 
+
+
+      
+
+    
+
 
 
 ---
@@ -46,7 +52,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: purely-user-service
+  name: user-service
   namespace: {{ .Values.namespace }}
 spec:
   selector:
